--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,13 @@ quarkus.datasource.username=postgres
 quarkus.datasource.password=123456
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/ecommerce_gabinetes
 
-quarkus.hibernate-orm.database.generation=drop-and-create
 
+quarkus.datasource.jdbc.max-size=20
+quarkus.datasource.jdbc.min-size=5
+quarkus.datasource.jdbc.initial-size=5
+quarkus.datasource.jdbc.max-wait=30s
+
+
+quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.bind-parameters=true
