--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,14 @@ quarkus.datasource.jdbc.max-wait=30s
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.log.bind-parameters=true
+
+## Configuração do JWT
+
+# Emissor
+mp.jwt.verify.issuer=unitins-jwt
+
+# Caminho da chave pública (usada para verificar os tokens recebidos)
+mp.jwt.verify.publickey.location=token/publicKey.pem
+
+# Caminho da chave privada (usada para assinar tokens que você gerar no backend)
+smallrye.jwt.sign.key.location=token/privateKey.pem
